Expand API and clean up after scan
